scroll issue on mobile fix

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -164,6 +164,9 @@
   visibility: visible;
 }
 @media screen and (max-width: 500px) {
+	.listParent {
+		margin: 0px 40px 0px 0px;
+	}
 	.CardDetails {
 		border-radius: 15px;
 		height: 110px;
