--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -61,11 +61,6 @@ h1{
     background: -ms-linear-gradient(45deg, rgba(255,0,223,1) 0%, rgba(255,255,0,1) 100%);
     background: linear-gradient(45deg, rgba(255,0,223,1) 0%, rgba(255,255,0,1) 100%);
 }
-@media screen and (max-width: 1200px) {
-	::-webkit-scrollbar {
-	  display: none;
-	}
-}
 @media screen and (max-width: 500px) {
 	.mainContainer {
 		grid-template-columns: 1;
